Fix Page background transparency in Dark Mode

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -12,7 +12,7 @@
 	--sl-color-gray-6: #24272f;
 	--sl-color-black: #17181c;
 	--bg-hero: #396ca540;
-	--bg-page: #ffedcb;
+	--bg-page: #ffedcb10;
 }
 /* Light mode colors. */
 :root[data-theme='light'] {
